# learn-cmake-mingw-cross

./: CMakeLists.txt  README.md
src/: main.cpp
